Coalesce native theme change notifications to deal with the dozens of them we get when the GTK theme changes.  Bug 352096, r+sr=roc